--- a/fitsmeright/Resource/Layout/Adapter/CC/PostCC.xib
+++ b/fitsmeright/Resource/Layout/Adapter/CC/PostCC.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="FeedCC" id="T35-hd-lYE" customClass="FeedCC" customModule="fitsmeright" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PostCC" id="T35-hd-lYE" customClass="PostCC" customModule="fitsmeright" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="400" height="475"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
